# automaton

./: LICENSE  README.md  automaton.cabal  stack.yaml
src/: CFG.hs  DFA.hs  Main.hs  NDFA.hs  NDFAL.hs  RegEx.hs  Syntax.hs  Trace.hs
