name:                automaton
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jbayardo/automaton#readme
license:             MIT
license-file:        LICENSE
author:              Julian Bayardo
maintainer:          julian@bayardo.info
copyright:           2018 Julian Bayardo
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable automaton
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends: 
    base >= 4.7 && < 5,
    containers >= 0.5.11.0 && < 0.6.0.0,
    lens,
    recursion-schemes,
    mtl,
    transformers,
    monad-loops
  default-extensions:
    NamedFieldPuns,
    TemplateHaskell